log
Thu 25 Apr 2024 07:55:54 PM UTC: 
 tests:  0|6
total_score: 0/70
19a2c41
Thu 25 Apr 2024 07:59:08 PM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|5
total_score: 10/70
b9e23e5
Thu 25 Apr 2024 08:37:19 PM UTC: 
 hashmap.c | 30 ++++++++++++++++++++++++++++++
 1 file changed, 30 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:62:36: error: expected ‘)’ before ‘{’ token
   62 |       if(is_equal(current->key,key){
      |         ~                          ^
      |                                    )
hashmap.c:67:5: error: expected expression before ‘}’ token
   67 |     }
      |     ^
hashmap.c:58:10: error: unused variable ‘aux’ [-Werror=unused-variable]
   58 |     long aux = map->current;
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
7467419
Thu 25 Apr 2024 08:45:57 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:62:36: error: expected ‘)’ before ‘{’ token
   62 |       if(is_equal(current->key,key){
      |         ~                          ^
      |                                    )
hashmap.c:68:5: error: expected expression before ‘}’ token
   68 |     }
      |     ^
hashmap.c:57:10: error: unused variable ‘aux’ [-Werror=unused-variable]
   57 |     long aux = map->current;
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
fa8b25e
Thu 25 Apr 2024 09:19:04 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:62:36: error: expected ‘)’ before ‘{’ token
   62 |       if(is_equal(current->key,key){
      |         ~                          ^
      |                                    )
hashmap.c:69:5: error: expected expression before ‘}’ token
   69 |     }
      |     ^
hashmap.c:57:10: error: unused variable ‘aux’ [-Werror=unused-variable]
   57 |     long aux = map->current;
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
c5bb505
Thu 25 Apr 2024 09:21:55 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:22: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   63 |         map->current = value;
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
856fb45
Thu 25 Apr 2024 09:23:05 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b5483b7
Thu 25 Apr 2024 09:35:31 PM UTC: 
 hashmap.c | 17 +++--------------
 1 file changed, 3 insertions(+), 14 deletions(-)
 tests:  0|0
bdd2181
Thu 25 Apr 2024 09:36:22 PM UTC: 
 hashmap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  2|5
total_score: 20/70
2d27f0b
Thu 25 Apr 2024 09:37:22 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
afdf740
Thu 25 Apr 2024 09:39:28 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
5a5e5a0
Thu 25 Apr 2024 09:45:55 PM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:97:67: error: expected ‘;’ before ‘:’ token
   97 |     if(is_equal(current->key , key)) return map->buckets[posicion]:
      |                                                                   ^
      |                                                                   ;
Compilation failed
02143df
Thu 25 Apr 2024 09:46:09 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
9dbdd25
Thu 25 Apr 2024 09:50:05 PM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  7|4
total_score: 30/70
39d9e74
Thu 25 Apr 2024 09:50:43 PM UTC: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  6|4
total_score: 30/70
fd571c1
Thu 25 Apr 2024 09:52:19 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|4
total_score: 30/70
5a5b21f
Thu 25 Apr 2024 09:54:15 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:88:15: error: expected expression before ‘void’
   88 |   if(is_equal(void *key1, void *key2)
      |               ^~~~
hashmap.c:88:6: error: too few arguments to function ‘is_equal’
   88 |   if(is_equal(void *key1, void *key2)
      |      ^~~~~~~~
hashmap.c:35:5: note: declared here
   35 | int is_equal(void* key1, void* key2){
      |     ^~~~~~~~
hashmap.c:88:38: error: expected ‘)’ before ‘current’
   88 |   if(is_equal(void *key1, void *key2)
      |     ~                                ^
      |                                      )
   89 |   current->key = NULL;
      |   ~~~~~~~                             
hashmap.c:91:1: error: expected expression before ‘}’ token
   91 | }
      | ^
hashmap.c:86:9: error: unused variable ‘current’ [-Werror=unused-variable]
   86 |   Pair *current =map->buckets[posicion];
      |         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
75bc893
Thu 25 Apr 2024 09:55:27 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 30/70
e239eaf
Thu 25 Apr 2024 09:55:47 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 30/70
649b846
Thu 25 Apr 2024 09:56:31 PM UTC: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  6|4
total_score: 30/70
fb4d383
Thu 25 Apr 2024 09:57:14 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 30/70
3560248
